Fixed error loading segments